Fixed the issue where the top icons were not showing up. Now need to decide which to keep and which to remove

--- a/app/assets/stylesheets/dashboard/themes/coporate/var.scss
+++ b/app/assets/stylesheets/dashboard/themes/coporate/var.scss
@@ -71,7 +71,7 @@ $heading-font-color-dark:#282323;
 $sidebar-header-color:#fff;
 $sidebar-header-iconset-background:#fff;
 $sidebar-header-iconset-background-active:#fff;
-$sidebar-header-iconset:url('${base-img-url}/icon/top-tray-b.png') no-repeat ;
+$sidebar-header-iconset:image-url('icons/top-tray-b.png') no-repeat ;
 $sidebar-header-iconset-2x:url('${base-img-url}/icon/top-tray-bx2.png') no-repeat ;
 $sidebar-color:#323237;
 $sidebar-link-color:#b2b2b2;
